--- a/Config/Darwin/Motion/Walks/DarwinWalkStart.cfg
+++ b/Config/Darwin/Motion/Walks/DarwinWalkStart.cfg
@@ -1,23 +1,21 @@
 DarwinWalkStart
 Max Speeds (x cm/s, y cm/s, yaw rad/s): [10, 10, 0.4]
-Max Accelerations (x cm/s/s, y cm/s/s, yaw rad/s/s): [50, 50, 3.6]
-StepFrequency: 1.67 [1.2, 4] The step frequency in Hz
-StepHeight: 4.0 [0.5, 6] The step height in cm
-SwingLeftRight: 2.0 [0.0, 4.0] in cm
-SwingTopDown: 0.5 [-1.0, 3.0] in cm
-XOffset: -1.0 [-5.0, 5.0] in cm
-YOffset: 0.5 [-5.0, 5.0] in cm
-ZOffset: 2.0 [1.0, 5.0] in cm
-RollOffset: 0.0 [-10.0, 10.0] in degrees
-PitchOffset: 0.0 [-10.0, 10.0] in degrees
-HipOffset: 13.0 [0.0, 25.0] in degrees
-PelvisOffset: 3.0 [-10.0, 10.0] in degrees
-DSPRatio: 0.1 [-0.5, 0.5] ?
+Max Accelerations (x cm/s/s, y cm/s/s, yaw rad/s/s): [20, 20, 0.8]
+StepFrequency: 1.25 [0.8, 3.0] The step frequency in Hz
+StepHeight: 2.0 [1.0, 4.0] The step height in cm
+SwingLeftRight: 2.7 [1.0, 4.0] The amount the torso moves left to right (ie transfer weight) in cm
+SwingTopDown: 0.3 [0, 0.8] The amount the torso moves up and down in cm
+XOffset: -0.5 [-1.0, 0.0] The offset of the CoM in the forward/backward direction in cm
+ZOffset: 2.0 [0.5, 5.0] The reduction in length of the legs (controls the height of the CoM) in cm
+PitchOffset: -1.0 [-10.0, 10.0] The body orientation relative to the ground about the ANKLE (degrees)
+HipOffset: 13.0 [0.0, 25.0] The torso orientation about the HIP (degrees)
+PelvisOffset: 3.0 [-10.0, 10.0] The angle relative to the torso in the y direction the swing leg moves to when swinging in degrees
+DSPRatio: 0.25 [0.1, 0.5] The fraction of the period spent in double support
 StepFBRatio: 0.28 [0, 1.0] ?
-BalanceKneePitch: 0.3 [0, 2.0] Balance control gain on the knee
-BalanceAnklePitch: 0.9 [0, 2.0] Balance control gain on the ankle pitch
-BalanceHipRoll: 0.5 [0, 2.0] Balance control gain on the hip roll
-BalanceAnkleRoll: 1.0 [0, 2.0] Balance control gain on the ankle roll
-ArmGains (%): [[30, 30, 30]]
+BalanceKneePitch: 0.3 [0, 1.5] Balance control gain on the knee pitch (based on gyro)
+BalanceHipPitch: 0.8 [0, 1.5] Balance control gain on the hip pitch (based on gyro)
+BalanceHipRoll: 0.4 [0, 1.5] Balance control gain on the hip roll (based on gyro)
+BalanceAnkleRoll: 0.8 [0, 1.5] Balance control gain on the ankle roll (based on gyro)
+ArmGains (%): [[10, 10, 10]]
 TorsoGains (%): []
-LegGains (%): [[65, 80, 80, 65, 65, 65]]
+LegGains (%): [[37.5, 37.5, 37.5, 37.5, 37.5, 37.5]]
